# netconfd-client

./: CMakeLists.txt  README.md
include/: netconfd.h
src/: client.c  client.h  main.c  message.h
