cmake_minimum_required(VERSION 2.6)
PROJECT(netconf_clientd)
ADD_DEFINITIONS(-Os -Wall --std=gnu11 -Wmissing-declarations -D_GNU_SOURCE)
INCLUDE_DIRECTORIES(include)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/build/modules")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/netconf_clientd)

SET(SOURCES
	src/client.c
	src/client.h
	src/main.c
	src/message.h
	include/netconfd.h
)

ADD_EXECUTABLE(netconf_clientd ${SOURCES})
TARGET_LINK_LIBRARIES(netconf_clientd  ${CMAKE_DL_LIBS})

FIND_PACKAGE(LIBUBOX REQUIRED)
INCLUDE_DIRECTORIES(${LIBUBOX_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(netconf_clientd ${LIBUBOX_LIBRARIES})

FIND_PACKAGE(LIBUBUS REQUIRED)
INCLUDE_DIRECTORIES(${LIBUBUS_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(netconf_clientd ${LIBUBUS_LIBRARIES})

FIND_PACKAGE(LIBROXML REQUIRED)
INCLUDE_DIRECTORIES(${LIBROXML_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(netconf_clientd ${LIBROXML_LIBRARIES})

FIND_PACKAGE(UCI REQUIRED)
INCLUDE_DIRECTORIES(${UCI_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(netconf_clientd ${UCI_LIBRARIES} ${CMAKE_DL_LIBS})


INSTALL(FILES ${PLUGIN_INCLUDE_FILES} DESTINATION usr/include/netconf_clientd)

INSTALL(TARGETS netconf_clientd RUNTIME DESTINATION usr/bin)
